fix dropdown position; resize font size and text align in mobile device

--- a/src/styles/mobile.scss
+++ b/src/styles/mobile.scss
@@ -52,6 +52,10 @@
           .preview {
             width: 56px;
             height: 56px;
+
+            .overlay {
+              font-size: 0.75em;
+            }
           }
         }
       }
